<resources>
    <string name="app_name">Ma Réu</string>
    <!-- Global names -->
    <string name="meetingList">Meeting list</string>
    <string name="list">List</string>
    <string name="addMeeting">Add a new meeting</string>
    <string name="editMeeting">Edit meeting</string>
    <string name="meetingDetails">Meeting Details</string>
    <string name="meetingTitle">Meeting title</string>
    <string name="meetingRoom">Meeting room</string>
    <string name="selectARoom">Select a room</string>
    <string name="meetingDate">Meeting date</string>
    <string name="meetingTime">Meeting time</string>
    <string name="startTime">Start time</string>
    <string name="endTime">End time</string>
    <string name="filterRooms">Filter by Room</string>
    <string name="filterDate">Filter by Date</string>
    <string name="filterTime">Filter by time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="selectAll">Select All</string>
    <string name="cancel">Cancel</string>
    <string name="membersList">Members List</string>
    <string name="addNewMember">Add a member email</string>
    <string name="emptyMeetingList">There are no meeting matching your filters criteria</string>
    <string name="invalidMeetingTitle">The title must have at least two characters</string>
    <string name="invalidMeetingRoomEmpty">Please select a room</string>
    <string name="invalidMeetingDateEmpty">Please select a date</string>
    <string name="invalidMeetingStartTimeEmpty">Please select a start time</string>
    <string name="invalidMeetingEndTimeEmpty">Please select an end time</string>
    <string name="invalidMeetingMiniumTwoMembers">At least two emails are required</string>
    <string name="invalidMeetingTimeSlot">Room is already reserved with:</string>
    <string name="invalidMeetingBeforeToday">Meeting can\'t be set before today</string>
    <string name="invalidMeetingMinDuration">Meeting is below minimum duration</string>
    <string name="invalidMeetingMaxDuration">Meeting is above maximum duration</string>
    <string name="invalidMeetingEndAfterMidnight">Meeting can\'t end after midnight</string>
    <string name="invalidMeetingEndsBeforeItStarts">Meeting can\'t end before it starts</string>

    <!-- Room names -->
    <string name="bowser">Bowser</string>
    <string name="donkey">Donkey</string>
    <string name="goomba">Goomba</string>
    <string name="kirby">Kirby</string>
    <string name="luigi">Luigi</string>
    <string name="mario">Mario</string>
    <string name="peach">Peach</string>
    <string name="toad">Toad</string>
    <string name="wario">Wario</string>
    <string name="yoshi">Yoshi</string>
    <!-- Descriptions -->
    <string name="addButton">Add Button</string>
    <string name="validateButton">Validate Button</string>
    <string name="icon">Icon</string>
</resources>