<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TimeFilterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fromTimeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:layout_margin="16dp"
        android:hint="@string/from"
        app:layout_constraintTop_toBottomOf="@+id/roomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        app:startIconTint="@color/blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fromTimeInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/toTimeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/to"
        app:layout_constraintTop_toBottomOf="@+id/fromTimeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        app:startIconTint="@color/blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toTimeInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/validateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>